Version 1.7.0.0
=================

New Features:
- Made different Layouts per Scene possible.
- Added an Event Based script mode. Scenes with this mode don't start the next scene
  automatically after finishing and instead continue listening for events.
- Added callbacks to PlayerEventCommunicator, PlayerIcons, PlayerMediaPlayer, 
  PlayerNotification, PlayerStorage, PlayerTimer.

Changes:
- Downloaded EOS scripts use the new Event Based script mode since that mirrors the 
  behavior on Milovana.

Fixed Bugs:
- Fixed Milovana Downloads. They should work again.
- EOS scripts center text again if orientation argument is not given.
- Fixed goto in a UI eval call not blocking the Scene until the Scene has switched.
  This has led to (mostly) EOS scripts not behaving as expected.
- Fixed an issue with EOS buttons following the wrong branch if the choice had 0 children.
- PlayerNotifcation should close open notificaions if a new one with the same id
  is opened.
- Fixed PlayerEval getting the return value from the wrong script in synchronously
  running eval requests.
- PlayerEval scripts now behave like in a browser (root can be referenced via 'window')
- Fixed script tags in button texts not being evaluated.
- Default Layout for EOS is the old one again.
- Fixed teaseStorage.removeItem setting the item to null instead of removing it from storage.

=================
Version 1.6.1.0
=================
Fixed Bugs:
- Fixed a potential deadlock in the Metronome.
- Removed a lot of unessessary SFX reloading in the metronome.

=================
Version 1.6.0.0
=================

New Features:
- New Debug interface for reading the debug log and running debug commands.
- Scene selection inplemented. Teases can define which Scenes are eligible
  to start from and the Title Card of those Scenes.
- Node debugger implemented.
- Button to open the Engine Settings folder added to debug tab.

Changes:
- Qml cache on Windows is in the same Folder as the settings since Windows